# boinc-app-ipc

./: README.md  meson.build
src/: main.cpp  manager.hpp  result.hpp  xmlpp_util.hpp
